<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_bottom_bar_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/property"
        android:icon="@drawable/ic_bottom_my_properties"
        android:title="@string/menu_property" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_bottom_favorite"
        android:title="@string/menu_favourite" />

    <item
        android:id="@+id/chat"
        android:visible="false"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chat" />



    <item
        android:id="@+id/user"
        android:icon="@drawable/ic_bottom_profile"
        android:title="@string/menu_profile" />

</menu>
